--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/grinny_head.png" alt="logo" />
+            <img sizes="32x32" src="images/x-icon/grinny_head.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
